# emma

./: .gitignore  CLAUDE.md  EMMA_PROJECT_CONTEXT.md  README.md  docker-compose.yml  emma-docker.bat  emma-docker.ps1  publish-emma.ps1  setup-emma.ps1  setup.sh  start-emma.bat  start-emma.ps1
.claude/: settings.local.json
.claude/commands/: analyze-emma.md  quick-improve.md  refactor-emma.md
.claude/skills/: api-testing.md  commit-message-generator.md  emma-backend.md  emma-deployment.md  emma-frontend.md  error-handling.md  uv-python.md  webapp-testing.md
.github/workflows/: cd.yml
client/: index.html  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  (+1 more)
docs/: INSTALLATION.md
emma-improvements/: README.md  docker-compose.prod.yml
emma-improvements/emma-improvements/server/: pyproject.toml
emma-improvements/emma-improvements/server/alembic/versions/: 20240419_02_auth.py  20240421_04_audit.py
emma-improvements/emma-improvements/server/app/: main.py
emma-improvements/emma-improvements/server/app/api/: deps.py
emma-improvements/emma-improvements/server/app/api/v1/routers/: auth.py  docker.py  services.py
emma-improvements/emma-improvements/server/app/db/: session.py
emma-improvements/emma-improvements/server/app/models/: service.py  user.py
emma-improvements/emma-improvements/server/app/services/: audit_service.py  auth.py  docker_client.py  docker_service.py  scheduler.py  user_management.py
server/: .env.example  .env.test  alembic.ini  create_admin.py  pyproject.toml  reset_password.py
skills/: EMMA_RECOMMENDED_SKILLS.md
(+160 files in other folders)
