[project]
name = "emma-server"
version = "0.1.0"
description = "eMMA monitoring backend"
requires-python = ">=3.11"
authors = [{name = "DojaFlow AI"}]
dependencies = [
  "fastapi~=0.110",
  "uvicorn[standard]~=0.29",
  "sqlalchemy[asyncio]~=2.0",
  "asyncpg~=0.29",
  "aiosqlite~=0.20",
  "alembic~=1.13",
  "pydantic~=2.6",
  "pydantic-settings~=2.2",
  "pyjwt[crypto]~=2.8",
  "passlib[bcrypt]~=1.7",
  "bcrypt~=4.1",
  "structlog~=24.1",
  "jinja2~=3.1",
  "python-multipart~=0.0.9",
  "httpx~=0.27",
  "email-validator~=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.1",
  "pytest-asyncio~=0.23",
  "pytest-cov~=4.1",
  "anyio~=4.2",
  "ruff~=0.4",
  "mypy~=1.8",
  "types-passlib~=1.7",
]
docker = [
  "aiodocker~=0.21",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
